--- a/index.html
+++ b/index.html
@@ -31,72 +31,87 @@
             <button class="explo__btn" href="#restaurants">Explorer nos restaurants</button>
         </section>
         <section class="fonctionnement">
-            <h2 class="fonctionnement_title">Fonctionnement</h2>
-            <div class="fonctionnement__etape">
-                <span class="numb">1</span>
-                    <i class="fas fa-mobile-alt"></i>
-                <span class="txt">Choisissez un restaurant</span>
-            </div>
-            <div class="fonctionnement__etape">
-                <span class="numb">2</span>
-                <i class="fa-solid fa-list"></i>
-                <span class="txt">Composez votre menu</span>
-            </div>
-            <div class="fonctionnement__etape">
-                <span class="numb">3</span>
-                <i class="fa-solid fa-store"></i>
-                <span class="txt">Dégustez au restaurant</span>
+            <div class="container">
+                <h2 class="fonctionnement__title">Fonctionnement</h2>
+                <div class="fonctionnement__etapes">
+                    <div class="fonctionnement__etape">
+                        <span class="numb">1</span>
+                            <i class="fas fa-mobile-alt"></i>
+                        <span class="txt">Choisissez un restaurant</span>
+                    </div>
+                    <div class="fonctionnement__etape">
+                        <span class="numb">2</span>
+                        <i class="fa-solid fa-list"></i>
+                        <span class="txt">Composez votre menu</span>
+                    </div>
+                    <div class="fonctionnement__etape">
+                        <span class="numb">3</span>
+                        <i class="fa-solid fa-store"></i>
+                        <span class="txt">Dégustez au restaurant</span>
+                    </div>
+                </div>
             </div>
         </section>
         <section id="restaurant" class="restau">
-            <h2>Restaurants</h2>
-            
-            <a href="menu-lpdg.html">
-                <article class="restau__card">
-                    <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="card_img" alt="la palette du goût">
+            <div class="container">
+                <h2>Restaurants</h2>
+                <a href="menu-lpdg.html">
+                    <article class="restau__card">
+                        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="card_img" alt="la palette du goût">
+                            <div class="card__content">
+                                <div class="text">
+                                    <h3>La palette du goût</h3>
+                                    <p>Ménilmontant</p>
+                                    <div class="heart">
+                                        <i class="fa-regular fa-heart"></i>
+                                    </div>
+                                </div>
+                            </div>    
+                    </article>
+                </a>
+                <a href="menu-lne.html">
+                    <article class="restau__card">                  
+                        <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" class="card_img" alt="la note enchantée">
                         <div class="card__content">
                             <div class="text">
-                                <h3>La palette du goût</h3>
-                                <p>Ménilmontant</p>
-                            <i class="fa-regular fa-heart"></i>
+                                <h3>La note enchantée</h3>
+                                <p>Charonne</p>
+                                <div class="heart">
+                                    <i class="fa-regular fa-heart"></i>
+                                </div>
                             </div>
-                </article>
-            </a>
-            <a href="menu-lne.html">
-                <article class="restau__card">                  
-                    <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" class="card_img" alt="la note enchantée">
-                    <div class="card__content">
-                        <div class="text">
-                            <h3>La note enchantée</h3>
-                            <p>Charonne</p>
-                            <i class="fa-regular fa-heart"></i>
                         </div>
-                    
-                </article>
-            </a>
-            <a href="menu-alf.html">
-                <article class="restau__card">
-                    <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" class="card_img" alt="a la française">
-                    <div class="card__content">
-                        <div class="text">
-                            <h3>A la française</h3>
-                            <p>Cité Rouge</p>
-                            <i class="fa-regular fa-heart"></i>
+                    </article>
+                </a>
+                <a href="menu-alf.html">
+                    <article class="restau__card">
+                        <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" class="card_img" alt="a la française">
+                        <div class="card__content">
+                            <div class="text">
+                                <h3>A la française</h3>
+                                <p>Cité Rouge</p>
+                                <div class="heart">
+                                    <i class="fa-regular fa-heart"></i>
+                                </div>
+                            </div>
+                        </div>    
+                    </article>
+                </a>
+                <a href="menu-ldds.html">
+                    <article class="restau__card">
+                        <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" class="card_img" alt="le délice des sens">
+                        <div class="card__content">
+                            <div class="text">
+                                <h3>Le délice des sens</h3>
+                                <p>Folie-Méricourt</p>
+                                <div class="heart">
+                                    <i class="fa-regular fa-heart"></i>
+                                </div>
+                            </div>
                         </div>
-                </article>
-            </a>
-            <a href="menu-ldds.html">
-                <article class="restau__card">
-                    <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" class="card_img" alt="le délice des sens">
-                    <div class="card__content">
-                        <div class="text">
-                            <h3>Le délice des sens</h3>
-                            <p>Folie-Méricourt</p>
-                            <i class="fa-regular fa-heart"></i>
-                        </div>
-                    </div>
-                </article>
-            </a>
+                    </article>
+                </a>
+            </div>
         </section>
     </main>
     <footer>
