--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">    
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
     <title>OhMyFood</title>
 </head>
 <body>
@@ -117,18 +120,22 @@
     <footer>
         <div class="foot">
             <div class="foot__logo">
-                <img src="images/logo/ohmyfood@2x.svg" alt="logo OMF">
+                <h2>ohmyfood</h2>
             </div>
-            <div class="foot__icon">
-                <i class="fa-solid fa-utensils"></i>
-                <a href="#">Proposer un restaurant</a>
+            <div class="foot__liens">
+                <div class="icon">
+                    <i class="fa-solid fa-utensils"></i>
+                    <a href="#">Proposer un restaurant</a>
+                </div>
+                <div class="icon">
+                    <i class="fa-solid fa-handshake"></i>
+                    <a href="#">Devenir partenaire</a>
+                </div>
             </div>
-            <div class="foot__icon">
-                <i class="fa-solid fa-handshake"></i>
-                <a href="#">Devenir partenaire</a>
+            <div class="foot__contact">
+                <a href="#">Mentions légales</a>
+                <a href="#">Contact</a>
             </div>
-            <a href="#">Mentions légales</a>
-            <a href="#">Contact</a>
         </div>
     </footer>
     
