--- a/index.html
+++ b/index.html
@@ -58,62 +58,70 @@
         <section id="restaurant" class="restau">
             <div class="container">
                 <h2>Restaurants</h2>
-                <a href="menu-lpdg.html">
-                    <article class="restau__card">
-                        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="card_img" alt="la palette du goût">
+                <div class="bur">
+                    <a href="menu-lpdg.html">
+                        <article class="restau__card">
+                            <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="card_img" alt="la palette du goût">
+                                <div class="card__content">
+                                    <div class="text">
+                                        <h3>La palette du goût</h3>
+                                        <p>Ménilmontant</p>
+                                        <div class="heart">
+                                            <i class="fa-regular fa-heart"></i>
+                                        </div>
+                                    </div>
+                                    <div class="new">
+                                        <p class="new1">Nouveau</p>
+                                    </div>
+                                </div>    
+                        </article>
+                    </a>
+                    <a href="menu-lne.html">
+                        <article class="restau__card">                  
+                            <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" class="card_img" alt="la note enchantée">
                             <div class="card__content">
                                 <div class="text">
-                                    <h3>La palette du goût</h3>
-                                    <p>Ménilmontant</p>
+                                    <h3>La note enchantée</h3>
+                                    <p>Charonne</p>
+                                    <div class="heart">
+                                        <i class="fa-regular fa-heart"></i>
+                                    </div>
+                                    <div class="new">
+                                        <p class="new1">Nouveau</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </article>
+                    </a>
+                    <a href="menu-alf.html">
+                        <article class="restau__card">
+                            <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" class="card_img" alt="a la française">
+                            <div class="card__content">
+                                <div class="text">
+                                    <h3>A la française</h3>
+                                    <p>Cité Rouge</p>
                                     <div class="heart">
                                         <i class="fa-regular fa-heart"></i>
                                     </div>
                                 </div>
                             </div>    
-                    </article>
-                </a>
-                <a href="menu-lne.html">
-                    <article class="restau__card">                  
-                        <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" class="card_img" alt="la note enchantée">
-                        <div class="card__content">
-                            <div class="text">
-                                <h3>La note enchantée</h3>
-                                <p>Charonne</p>
-                                <div class="heart">
-                                    <i class="fa-regular fa-heart"></i>
+                        </article>
+                    </a>
+                    <a href="menu-ldds.html">
+                        <article class="restau__card">
+                            <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" class="card_img" alt="le délice des sens">
+                            <div class="card__content">
+                                <div class="text">
+                                    <h3>Le délice des sens</h3>
+                                    <p>Folie-Méricourt</p>
+                                    <div class="heart">
+                                        <i class="fa-regular fa-heart"></i>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                    </article>
-                </a>
-                <a href="menu-alf.html">
-                    <article class="restau__card">
-                        <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" class="card_img" alt="a la française">
-                        <div class="card__content">
-                            <div class="text">
-                                <h3>A la française</h3>
-                                <p>Cité Rouge</p>
-                                <div class="heart">
-                                    <i class="fa-regular fa-heart"></i>
-                                </div>
-                            </div>
-                        </div>    
-                    </article>
-                </a>
-                <a href="menu-ldds.html">
-                    <article class="restau__card">
-                        <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" class="card_img" alt="le délice des sens">
-                        <div class="card__content">
-                            <div class="text">
-                                <h3>Le délice des sens</h3>
-                                <p>Folie-Méricourt</p>
-                                <div class="heart">
-                                    <i class="fa-regular fa-heart"></i>
-                                </div>
-                            </div>
-                        </div>
-                    </article>
-                </a>
+                        </article>
+                    </a>
+                </div>
             </div>
         </section>
     </main>
