--- a/menu-alf.html
+++ b/menu-alf.html
@@ -18,7 +18,7 @@
 <body>
     <header>
         <div class="head">
-            <div class="logo">
+            <div class="log">
                 <a href="index.html">
                     <i class="fa-solid fa-arrow-left"></i>
                 </a>
@@ -28,61 +28,71 @@
         </div>    
     </header>
     <main>
-
-        <div class="imgmen">
-            <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Photo restaurant">
-        </div>
-        <div class="menu">
-            <h1 class="titrerestau">La palette du goût</h1>
-            <div class="menu__section">
-                <h3 class="menu__titre">ENTREES</h3>
-                <div class="menu__carte">
-                    <h3 class="menu__titre2">Fricassée d'escargots</h3>
-                    <p>Au piment d'Espelette</p>
+            <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo restaurant">
+        <div class="container_menu">
+        <section class="menu">
+            <div class="titre3">
+                <h1 class="titrerestau">À la française</h1>
+                <div class="heart2">
+                    <i class="fa-regular fa-heart"></i>
                 </div>
-                <div class="menu__carte">
-                    <h3 class="carte__titre"> Foie gras de canard mi-cuit</h3>
-                    <p>Et ses copeaux de truffe noire</p>
-                </div>
-                <div class="menu__carte">
-                    <h3 class="carte__titre">Oeuf au plat</h3>
-                    <p>Assaisoné à la truffe sur lit de caviar</p>
-                </div>
-
             </div>
-            <div class="menu__section">
+            <section class="menu__section">
+                <h3 class="titremenu">ENTREES</h3>
+                <div class="carte">
+                    <h3 class="menu__titre2">Tartare de poulpe acidulé</h3>
+                    <p>Aux zestes d'orange</p>
+                    <h3 class="prix">25€</h3>
+                </div>
+                <div class="carte">
+                        <h3 class="carte__titre">Velouté de légumes d'antan</h3>
+                        <p>Carotte, panais, topinambour</p>
+                        <h3 class="prix">35€</h3>
+                </div>
+                <div class="carte">
+                    <h3 class="carte__titre">Soupe à l'oignon</h3>
+                    <p>Revisitée</p>
+                    <h3 class="prix">20€</h3>
+                </div>
+            </section>
+            <section class="menu__section">
                 <h3 class="titremenu">PLATS</h3>
-                <div class="menu__carte">
-                    <h3 class="carte__titre">Filet de boeuf aux herbes</h3>
-                    <p>Accompagnés de sa ribambelle de légumes</p>
-                
+                <div class="carte">
+                    <h3 class="carte__titre">Coquilles Saint-Jacques</h3>
+                    <p>Accompagnées d'une purée de panais</p>
+                    <h3 class="prix">40€</h3>
                 </div>
-                <div class="menu__carte">
-                    <h3 class="carte__titre">Parmentier de queue de boeuf</h3>
-                    <p>A la truffe noire sur sa purée de panais</p>
+                <div class="carte">
+                    <h3 class="carte__titre">Magret de canard</h3>
+                    <p>Et parmentier de pommes de terre</p>
+                    <h3 class="prix">35€</h3>
                 </div>
-                <div class="menu__carte">
-                    <h3 class="carte__titre"> Filet de turbot</h3>
-                    <p>Aux agrumes</p>
+                <div class="carte">
+                    <h3 class="carte__titre">Pigeonneau d’Ille-et-Vilaine</h3>
+                    <p>Sur son lit de gnocchis aux légume</p>
+                    <h3 class="prix">44€</h3>
                 </div>
-
-            </div>
-            <div class="menu__section">
+            </section>
+            <section class="menu__section">
                 <h3 class="titremenu">DESSERTS</h3>
-                <div class="menu__carte">
-                    <h3 class="carte__titre">Paris-Brest</h3>
+                <div class="carte">
+                    <h3 class="carte__titre">Pétales de violettes glacés</h3>
+                    <p>Et purée de noisettes</p>
+                    <h3 class="prix">18€</h3>
+                </div>
+                <div class="carte">
+                    <h3 class="carte__titre">Fondant au chocolat</h3>
                     <p>Revisité</p>
+                    <h3 class="prix">22€</h3>
                 </div>
-                <div class="menu__carte">
-                    <h3 class="carte__titre">Macaron au chocolat d'exception</h3>
-                    <p>Et glace à la vanille de Madagascar</p>
+                <div class="carte">
+                    <h3 class="carte__titre">Millefeuille croustillant</h3>
+                    <p>Myrtilles et pâte d’amande</p>
+                    <h3 class="prix">23€</h3>
                 </div>
-                <div class="menu__carte">
-                    <h3 class="carte__titre">Mousse au chocolat</h3>
-                    <p>Au piment d'Espelette et à la truffe noire</p>
-                </div>
-            </div>
-            <button class="menu__btn" href="#">Commander</button>  
+            </section>
+                <button class="menu__bouton" href="#">Commander</button>
+        </section>
         </div>
     </main>
     <footer>
