--- a/menu-lne.html
+++ b/menu-lne.html
@@ -18,7 +18,7 @@
 <body>
     <header>
         <div class="head">
-            <div class="logo">
+            <div class="log">
                 <a href="index.html">
                     <i class="fa-solid fa-arrow-left"></i>
                 </a>
@@ -28,61 +28,76 @@
         </div>    
     </header>
     <main>
-
-        <div class="imgmen">
-            <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Photo restaurant">
-        </div>
-        <div class="menu">
-            <h1 class="titrerestau">La note enchantée</h1>
-            <div class="menu__section">
-                <h3 class="menu__titre">ENTREES</h3>
-                <div class="menu__carte">
-                    <h3 class="menu__titre2">Fricassée d'escargots</h3>
-                    <p>Au piment d'Espelette</p>
+            <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Photo restaurant">
+        <div class="container_menu">
+        <section class="menu">
+            <div class="titre3">
+                <h1 class="titrerestau">La note enchantée</h1>
+                <div class="heart2">
+                    <i class="fa-regular fa-heart"></i>
                 </div>
-                <div class="menu__carte">
-                    <h3 class="carte__titre"> Foie gras de canard mi-cuit</h3>
-                    <p>Et ses copeaux de truffe noire</p>
-                </div>
-                <div class="menu__carte">
-                    <h3 class="carte__titre">Oeuf au plat</h3>
-                    <p>Assaisoné à la truffe sur lit de caviar</p>
-                </div>
-
             </div>
-            <div class="menu__section">
+            <section class="menu__section">
+                <h3 class="titremenu">ENTREES</h3>
+                <div class="carte">
+                    <h3 class="menu__titre2">Ravioles de foie gras</h3>
+                    <p>Accompagnées de leur crème à la truffe</p>
+                    <h3 class="prix">25€</h3>
+                </div>
+                <div class="carte">
+                        <h3 class="carte__titre">Caviar osciètre</h3>
+                        <p>Sur blini à la farine de blé noir</p>
+                        <h3 class="prix">35€</h3>
+                </div>
+                <div class="carte">
+                    <h3 class="carte__titre">Homard et espuma de potiron</h3>
+                    <p>Marinés aux zestes d'orange</p>
+                    <h3 class="prix">20€</h3>
+                </div>
+                <div class="carte">
+                    <h3 class="carte__titre">Foie gras de canard cuit entier</h3>
+                    <p>Confiture de figue et pain toasté</p>
+                    <h3 class="prix">35€</h3>
+                </div>
+            </section>
+            <section class="menu__section">
                 <h3 class="titremenu">PLATS</h3>
-                <div class="menu__carte">
-                    <h3 class="carte__titre">Filet de boeuf aux herbes</h3>
-                    <p>Accompagnés de sa ribambelle de légumes</p>
-                
+                <div class="carte">
+                    <h3 class="carte__titre">Noix de coquilles Saint-Jacques</h3>
+                    <p>Sur lit de purée de céleri-rave</p>
+                    <h3 class="prix">40€</h3>
                 </div>
-                <div class="menu__carte">
-                    <h3 class="carte__titre">Parmentier de queue de boeuf</h3>
-                    <p>A la truffe noire sur sa purée de panais</p>
+                <div class="carte">
+                    <h3 class="carte__titre">Langoustine poêlée</h3>
+                    <p>Purée de patate douce</p>
+                    <h3 class="prix">35€</h3>
                 </div>
-                <div class="menu__carte">
-                    <h3 class="carte__titre"> Filet de turbot</h3>
-                    <p>Aux agrumes</p>
+                <div class="carte">
+                    <h3 class="carte__titre">Mijoté de queue de bœuf</h3>
+                    <p>Et riz sauvage aux zestes de citron</p>
+                    <h3 class="prix">44€</h3>
                 </div>
-
-            </div>
-            <div class="menu__section">
+            </section>
+            <section class="menu__section">
                 <h3 class="titremenu">DESSERTS</h3>
-                <div class="menu__carte">
-                    <h3 class="carte__titre">Paris-Brest</h3>
-                    <p>Revisité</p>
+                <div class="carte">
+                    <h3 class="carte__titre">Macaron noisette et chocolat</h3>
+                    <p>Glace au caramel brun et sel de Guérande</p>
+                    <h3 class="prix">18€</h3>
                 </div>
-                <div class="menu__carte">
-                    <h3 class="carte__titre">Macaron au chocolat d'exception</h3>
-                    <p>Et glace à la vanille de Madagascar</p>
+                <div class="carte">
+                    <h3 class="carte__titre">Baba au rhum revisité</h3>
+                    <p>Avec son coulis de citron</p>
+                    <h3 class="prix">22€</h3>
                 </div>
-                <div class="menu__carte">
-                    <h3 class="carte__titre">Mousse au chocolat</h3>
-                    <p>Au piment d'Espelette et à la truffe noire</p>
+                <div class="carte">
+                    <h3 class="carte__titre">Tarte au citron meringuée</h3>
+                    <p>Déstructurée</p>
+                    <h3 class="prix">23€</h3>
                 </div>
-            </div>
-            <button class="menu__btn" href="#">Commander</button>  
+            </section>
+                <button class="menu__bouton" href="#">Commander</button>
+        </section>
         </div>
     </main>
     <footer>
