--- a/menu-ldds.html
+++ b/menu-ldds.html
@@ -30,6 +30,7 @@
     <main>
             <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Photo restaurant">
         <div class="container_menu">
+            <div class="bg-grey"></div>
         <section class="menu">
             <div class="titre3">
                 <h1 class="titrerestau">Le délice des sens</h1>
@@ -43,16 +44,25 @@
                     <h3 class="menu__titre2">Tartare de thon</h3>
                     <p>Assaisonné au yuzu</p>
                     <h3 class="prix">25€</h3>
+                    <div class="valid">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
                 </div>
                 <div class="carte">
                         <h3 class="carte__titre">Bouchée de homard croustillant</h3>
                         <p>Et sa farandole de petits légumes</p>
                         <h3 class="prix">35€</h3>
+                        <div class="valid">
+                            <i class="fa-solid fa-circle-check"></i>
+                        </div>
                 </div>
                 <div class="carte">
                     <h3 class="carte__titre">Velouté de cèpes</h3>
                     <p>Aux truffes</p>
                     <h3 class="prix">20€</h3>
+                    <div class="valid">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
                 </div>
             </section>
             <section class="menu__section">
@@ -61,6 +71,9 @@
                     <h3 class="carte__titre">Poulet rôti aux herbes de Provence</h3>
                     <p>Et sa crème de truffe</p>
                     <h3 class="prix">40€</h3>
+                    <div class="valid">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
                 </div>
                 <div class="carte">
                     <h3 class="carte__titre">Langouste rôtie</h3>
@@ -71,6 +84,9 @@
                     <h3 class="carte__titre">Côte de bœuf Angus</h3>
                     <p>Et sa purée de panais</p>
                     <h3 class="prix">44€</h3>
+                    <div class="valid">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
                 </div>
             </section>
             <section class="menu__section">
@@ -79,16 +95,25 @@
                     <h3 class="carte__titre">Farandole de desserts</h3>
                     <p>Du chef</p>
                     <h3 class="prix">18€</h3>
+                    <div class="valid">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
                 </div>
                 <div class="carte">
                     <h3 class="carte__titre">Crème brulée</h3>
                     <p>Revisitée</p>
                     <h3 class="prix">22€</h3>
+                    <div class="valid">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
                 </div>
                 <div class="carte">
                     <h3 class="carte__titre">Tiramisu</h3>
                     <p>À la noisette</p>
                     <h3 class="prix">23€</h3>
+                    <div class="valid">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
                 </div>
             </section>
                 <button class="menu__bouton" href="#">Commander</button>
