--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
                                         <div class="heart">
                                             <i class="fa-regular fa-heart"></i>
                                         </div>
+                                        <div class="heartfull">
+                                            <i class="fa-solid fa-heart"></i>
+                                        </div>
                                     </div>
                                     <div class="new">
                                         <p class="new1">Nouveau</p>
