--- a/menu-alf.html
+++ b/menu-alf.html
@@ -30,6 +30,7 @@
     <main>
             <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo restaurant">
         <div class="container_menu">
+        <div class="bg-grey"></div>
         <section class="menu">
             <div class="titre3">
                 <h1 class="titrerestau">À la française</h1>
@@ -43,16 +44,25 @@
                     <h3 class="menu__titre2">Tartare de poulpe acidulé</h3>
                     <p>Aux zestes d'orange</p>
                     <h3 class="prix">25€</h3>
+                    <div class="valid">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
                 </div>
                 <div class="carte">
                         <h3 class="carte__titre">Velouté de légumes d'antan</h3>
                         <p>Carotte, panais, topinambour</p>
                         <h3 class="prix">35€</h3>
+                        <div class="valid">
+                            <i class="fa-solid fa-circle-check"></i>
+                        </div>
                 </div>
                 <div class="carte">
                     <h3 class="carte__titre">Soupe à l'oignon</h3>
                     <p>Revisitée</p>
                     <h3 class="prix">20€</h3>
+                    <div class="valid">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
                 </div>
             </section>
             <section class="menu__section">
@@ -61,16 +71,25 @@
                     <h3 class="carte__titre">Coquilles Saint-Jacques</h3>
                     <p>Accompagnées d'une purée de panais</p>
                     <h3 class="prix">40€</h3>
+                    <div class="valid">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
                 </div>
                 <div class="carte">
                     <h3 class="carte__titre">Magret de canard</h3>
                     <p>Et parmentier de pommes de terre</p>
                     <h3 class="prix">35€</h3>
+                    <div class="valid">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
                 </div>
                 <div class="carte">
                     <h3 class="carte__titre">Pigeonneau d’Ille-et-Vilaine</h3>
                     <p>Sur son lit de gnocchis aux légume</p>
                     <h3 class="prix">44€</h3>
+                    <div class="valid">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
                 </div>
             </section>
             <section class="menu__section">
@@ -79,16 +98,25 @@
                     <h3 class="carte__titre">Pétales de violettes glacés</h3>
                     <p>Et purée de noisettes</p>
                     <h3 class="prix">18€</h3>
+                    <div class="valid">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
                 </div>
                 <div class="carte">
                     <h3 class="carte__titre">Fondant au chocolat</h3>
                     <p>Revisité</p>
                     <h3 class="prix">22€</h3>
+                    <div class="valid">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
                 </div>
                 <div class="carte">
                     <h3 class="carte__titre">Millefeuille croustillant</h3>
                     <p>Myrtilles et pâte d’amande</p>
                     <h3 class="prix">23€</h3>
+                    <div class="valid">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
                 </div>
             </section>
                 <button class="menu__bouton" href="#">Commander</button>
