--- a/menu-lne.html
+++ b/menu-lne.html
@@ -30,6 +30,7 @@
     <main>
             <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Photo restaurant">
         <div class="container_menu">
+            <div class="bg-grey"></div>
         <section class="menu">
             <div class="titre3">
                 <h1 class="titrerestau">La note enchantée</h1>
@@ -43,21 +44,33 @@
                     <h3 class="menu__titre2">Ravioles de foie gras</h3>
                     <p>Accompagnées de leur crème à la truffe</p>
                     <h3 class="prix">25€</h3>
+                    <div class="valid">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
                 </div>
                 <div class="carte">
                         <h3 class="carte__titre">Caviar osciètre</h3>
                         <p>Sur blini à la farine de blé noir</p>
                         <h3 class="prix">35€</h3>
+                        <div class="valid">
+                            <i class="fa-solid fa-circle-check"></i>
+                        </div>
                 </div>
                 <div class="carte">
                     <h3 class="carte__titre">Homard et espuma de potiron</h3>
                     <p>Marinés aux zestes d'orange</p>
                     <h3 class="prix">20€</h3>
+                    <div class="valid">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
                 </div>
                 <div class="carte">
                     <h3 class="carte__titre">Foie gras de canard cuit entier</h3>
                     <p>Confiture de figue et pain toasté</p>
                     <h3 class="prix">35€</h3>
+                    <div class="valid">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
                 </div>
             </section>
             <section class="menu__section">
@@ -66,16 +79,25 @@
                     <h3 class="carte__titre">Noix de coquilles Saint-Jacques</h3>
                     <p>Sur lit de purée de céleri-rave</p>
                     <h3 class="prix">40€</h3>
+                    <div class="valid">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
                 </div>
                 <div class="carte">
                     <h3 class="carte__titre">Langoustine poêlée</h3>
                     <p>Purée de patate douce</p>
                     <h3 class="prix">35€</h3>
+                    <div class="valid">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
                 </div>
                 <div class="carte">
                     <h3 class="carte__titre">Mijoté de queue de bœuf</h3>
                     <p>Et riz sauvage aux zestes de citron</p>
                     <h3 class="prix">44€</h3>
+                    <div class="valid">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
                 </div>
             </section>
             <section class="menu__section">
@@ -84,16 +106,25 @@
                     <h3 class="carte__titre">Macaron noisette et chocolat</h3>
                     <p>Glace au caramel brun et sel de Guérande</p>
                     <h3 class="prix">18€</h3>
+                    <div class="valid">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
                 </div>
                 <div class="carte">
                     <h3 class="carte__titre">Baba au rhum revisité</h3>
                     <p>Avec son coulis de citron</p>
                     <h3 class="prix">22€</h3>
+                    <div class="valid">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
                 </div>
                 <div class="carte">
                     <h3 class="carte__titre">Tarte au citron meringuée</h3>
                     <p>Déstructurée</p>
                     <h3 class="prix">23€</h3>
+                    <div class="valid">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
                 </div>
             </section>
                 <button class="menu__bouton" href="#">Commander</button>
