add loader + finish site

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <title>OhMyFood</title>
 </head>
 <body>
+    <div class="bg-loader">
+        <span class="loader"></span>
+    </div>
     <header>
         <div class="head">
             <div class="logo">
@@ -68,6 +71,7 @@
                                         <p>Ménilmontant</p>
                                         <div class="heart">
                                             <i class="fa-regular fa-heart"></i>
+                                            <i class="fa-solid fa-heart"></i>
                                         </div>
                                     <div class="new">
                                         <p class="new1">Nouveau</p>
@@ -84,6 +88,7 @@
                                     <p>Charonne</p>
                                     <div class="heart">
                                         <i class="fa-regular fa-heart"></i>
+                                        <i class="fa-solid fa-heart"></i>
                                     </div>
                                     <div class="new">
                                         <p class="new1">Nouveau</p>
@@ -101,6 +106,7 @@
                                     <p>Cité Rouge</p>
                                     <div class="heart">
                                         <i class="fa-regular fa-heart"></i>
+                                        <i class="fa-solid fa-heart"></i>
                                     </div>
                                 </div>
                             </div>    
@@ -115,6 +121,7 @@
                                     <p>Folie-Méricourt</p>
                                     <div class="heart">
                                         <i class="fa-regular fa-heart"></i>
+                                        <i class="fa-solid fa-heart"></i>
                                     </div>
                                 </div>
                             </div>
