--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </head>
 <body>
     <div class="bg-loader">
+        <img src="images/logo/ohmyfood.png" alt="logo OMF">
         <span class="loader"></span>
     </div>
     <header>
