--- a/menu-ldds.html
+++ b/menu-ldds.html
@@ -126,18 +126,18 @@
                 <h2>ohmyfood</h2>
             </div>
             <div class="foot__liens">
-                <div class="icon">
+                <div class="icon 1">
                     <i class="fa-solid fa-utensils"></i>
                     <a href="#">Proposer un restaurant</a>
                 </div>
-                <div class="icon">
+                <div class="icon 2">
                     <i class="fa-solid fa-handshake"></i>
                     <a href="#">Devenir partenaire</a>
                 </div>
             </div>
             <div class="foot__contact">
                 <a href="#">Mentions légales</a>
-                <a href="#">Contact</a>
+                <a href="mailto:ohmyfood@outlook.fr">Contact</a>
             </div>
         </div>
     </footer>
